--- a/docs/css/base.css
+++ b/docs/css/base.css
@@ -136,6 +136,7 @@
 			text-align: center;
 			padding-top: 5px;
 			padding-bottom: 5px;
+			font-size: 16px;
 		}
 
 		.player{
@@ -178,3 +179,36 @@
 		.footer p{
 			margin-top: 5px;
 		}
+
+
+		@media (max-width: 1024px) {
+			body {
+				background-color: green;
+			}
+
+			.radio-icon {
+				height: 160px;
+				width: 130px;
+			}
+	
+			.radio-icon img {
+				display: block;
+				width: 128px;
+				height: 128px;
+				border: 1px solid var(--accent-border-color);
+				border-radius: var(--sec-radius);
+			}
+			
+			.radio-icon a {
+				padding-top: 5px;
+				padding-bottom: 5px;
+			}
+		}
+
+		@media (max-width: 600px) {
+			body {
+				background-color: red;
+			}
+		}
+		
+		
