--- a/docs/css/base.css
+++ b/docs/css/base.css
@@ -58,14 +58,14 @@ body {
 	font-weight: 700;
 	font-size: 1.25rem;
 	letter-spacing: 0.02em;
-	padding: 0 8px 0 0;
+	padding: 0 8px 0 8px;
 	color: var(--main-text-color);
 	float: none;
 }
 
 #right {
 	margin-left: auto;
-	padding: 0 0 0 8px;
+	padding: 0 8px 0 8px;
 	color: var(--main-text-color);
 	float: none;
 }
@@ -76,7 +76,7 @@ body {
 	display: inline-flex;
 	align-items: center;
 	background: inherit;
-	padding: 0 8px;
+	padding: 0 8px 0 8px;
 	height: 40px;
 	border-radius: var(--main-radius);
 	font-weight: 500;
@@ -102,8 +102,9 @@ body {
 	transition: border 0.18s;
 }
 
+.header select:hover,
 .header select:focus {
-	border: 1.5px solid #377cfb;
+	border: 1.5px solid var(--main-text-color);
 }
 
 .wrapper {
@@ -262,9 +263,11 @@ input[type="checkbox"]#autoplay {
 		padding: 7px 24px 7px 8px;
 	}
 	.wrapper {
-		grid-template-columns: repeat(2, minmax(140px, 1fr));
+		grid-template-columns: repeat(3, minmax(0, 1fr));
 		padding: 7px;
 		gap: 9px;
+		width: 100%;
+		max-width: 100vw;
 	}
 	.radio-icon {
 		min-height: 190px;
@@ -286,7 +289,7 @@ input[type="checkbox"]#autoplay {
 
 @media (max-width: 380px) {
 	.wrapper {
-		grid-template-columns: repeat(1, minmax(90px, 1fr));
+		grid-template-columns: repeat(2, minmax(90px, 1fr));
 	}
 }
 
