--- a/docs/css/base.css
+++ b/docs/css/base.css
@@ -182,8 +182,8 @@ body {
 	background: var(--sec-bg-color);
 	box-shadow: 0 2px 12px 0 var(--shadow-color);
 	border-radius: var(--main-radius);
-	padding: 18px 10px 16px 10px;
-	margin: 18px 10px 0 10px;
+	padding: 18px 18px 16px 18px;
+	margin: 18px 18px 0 18px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -198,7 +198,7 @@ body {
 	min-width: 0;
 	margin: 0 auto 0 auto;
 	border-radius: 32px;
-	background: var(--accent-bg-color);
+	background: var(--sec-bg-color);
 	box-shadow: 0 1px 6px 0 var(--shadow-color);
 	overflow: hidden;
 	display: block;
